# staged-generics

./: README.md  classes.ml  classes.mli  dune  dune-project  instances.ml  instances.mli  staged-generics.opam
.github/workflows/: test.yml
